{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 157,
  "lineage": "183c8e94-998a-47dd-68e8-08614dce2053",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:vpc/vpc-009dd5ec77636d71e",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b293a444a3465949",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-357afa50",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009dd5ec77636d71e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d9588a4d445c588c",
            "ipv6_cidr_block": "2600:1f13:f2:8f00::/56",
            "main_route_table_id": "rtb-0ab3087de3179eb7c",
            "owner_id": "561246147461",
            "state": "available",
            "tags": {
              "Name": "rrm-test-vpc-rrm",
              "Namespace": "rrm",
              "Stage": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:security-group/sg-02aac3b9aa1941ea7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02aac3b9aa1941ea7",
            "ingress": [],
            "name": "default",
            "owner_id": "561246147461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e11e4e2c49bd82ac",
            "owner_id": "561246147461",
            "tags": {
              "Name": "rrm-test-vpc-rrm",
              "Namespace": "rrm",
              "Stage": "test"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0091425145fb7a951",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "561246147461",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0dbb5108f22df43e1",
              "subnet-0fe96e5cf2efad10f"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "rrm-test-subnetrrm",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb1a36090f7cb83c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "561246147461",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02f423d99889b6f75",
              "subnet-0da762e994115dec1"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "rrm-test-subnetrrm",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e11e4e2c49bd82ac",
            "id": "r-rtb-0d0d205c9f252d5601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0d205c9f252d560",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a9c75a78b6867c74",
            "owner_id": "561246147461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "rrm-test-subnetrrm-private-us-west-2a",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03728a395905ad24e",
            "owner_id": "561246147461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "rrm-test-subnetrrm-private-us-west-2b",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d0d205c9f252d560",
            "owner_id": "561246147461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "rrm-test-subnetrrm",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089539863a1876054",
            "route_table_id": "rtb-0a9c75a78b6867c74",
            "subnet_id": "subnet-0dbb5108f22df43e1"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f39154d6eb3005d",
            "route_table_id": "rtb-03728a395905ad24e",
            "subnet_id": "subnet-0fe96e5cf2efad10f"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a17592ffc012c9a3",
            "route_table_id": "rtb-0d0d205c9f252d560",
            "subnet_id": "subnet-02f423d99889b6f75"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08faa09f6e5affdf3",
            "route_table_id": "rtb-0d0d205c9f252d560",
            "subnet_id": "subnet-0da762e994115dec1"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:subnet/subnet-0dbb5108f22df43e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-0dbb5108f22df43e1",
            "map_public_ip_on_launch": false,
            "owner_id": "561246147461",
            "tags": {
              "Attributes": "private",
              "Name": "rrm-test-subnetrrm-private-us-west-2a",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:subnet/subnet-0fe96e5cf2efad10f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-0fe96e5cf2efad10f",
            "map_public_ip_on_launch": false,
            "owner_id": "561246147461",
            "tags": {
              "Attributes": "private",
              "Name": "rrm-test-subnetrrm-private-us-west-2b",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:subnet/subnet-02f423d99889b6f75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-02f423d99889b6f75",
            "map_public_ip_on_launch": true,
            "owner_id": "561246147461",
            "tags": {
              "Attributes": "public",
              "Name": "rrm-test-subnetrrm-public-us-west-2a",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:subnet/subnet-0da762e994115dec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.160.0/19",
            "id": "subnet-0da762e994115dec1",
            "map_public_ip_on_launch": true,
            "owner_id": "561246147461",
            "tags": {
              "Attributes": "public",
              "Name": "rrm-test-subnetrrm-public-us-west-2b",
              "Namespace": "rrm",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-009dd5ec77636d71e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:561246147461:vpc/vpc-009dd5ec77636d71e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f0d8738be8ccae79",
            "default_route_table_id": "rtb-0ab3087de3179eb7c",
            "default_security_group_id": "sg-02aac3b9aa1941ea7",
            "dhcp_options_id": "dopt-357afa50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009dd5ec77636d71e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d9588a4d445c588c",
            "ipv6_cidr_block": "2600:1f13:f2:8f00::/56",
            "main_route_table_id": "rtb-0ab3087de3179eb7c",
            "owner_id": "561246147461",
            "tags": {
              "Name": "rrm-test-vpc-rrm",
              "Namespace": "rrm",
              "Stage": "test"
            }
          }
        }
      ]
    }
  ]
}